test/classes/delete-free/owned/owned-record-instantiation-types-user-init-borrows-error.good
owned-record-instantiation-types-user-init-borrows-error.chpl:17: error: unresolved call 'GenericCollection(_owned(MyClass)).init=(type GenericCollection(_owned(MyClass)), GenericCollection(MyClass))'
owned-record-instantiation-types-user-init-borrows-error.chpl:5: note: candidates are: GenericCollection.init=(type ThisType, other: ThisType)
